2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Add missing file to EXTRA_DIST

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* include/.cvsignore:
	* src/.cvsignore:
	Add .cvsignore files

2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	Add XTRANS_CONNECTION_FLAGS to get network transport #defines
	for CvdStdSel.c
	* src/Makefile.am:
	Add libXmuu_la_LIBADD

2005-01-29  Daniel Stone  <daniel@freedesktop.org>

	* CvtStdSel.c (get_os_name):
	Change uname == 0 to uname >= 0 (X.Org HEAD).

	* include/X11/Xmu/SysUtil.h:
	* include/X11/Xmu/Xmu.h:
	Add gcc format attribute (X.Org HEAD).

2005-01-01  Phil Blundell  <philb@gnu.org>

	* configure.ac (XMUU_CFLAGS, XMUU_LIBS): New.
	* xmuu.pc.in: Use XMUU_CFLAGS+XMUU_LIBS, not XMU_CFLAGS+XMU_LIBS.

2004-05-17  Eric Anholt  <anholt@FreeBSD.org>

	* EditresCom.c:
	* WidgetNode.c: (XmuWnFetchResources):
	Axe the Xaw header dependency again.

2004-05-10  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* xmu.pc.in:
	* xmuu.pc.in:
	Properly include LIBS/CFLAGS in .pc and linking.
	Bump to version 6.2.3.

2004-04-13  Daniel Stone  <daniel@freedesktop.org>

	* EditresCom.c:
	X11R6.7 merge - various minor cleanups.

	* Bump version to 6.2.2 for xlibs 1.0.1.

2004-03-17  Carlos Romero <kidcrash@bellsouth.net>

	(Commit sponsored by Daniel Stone.)
	* Makefile.am:
	* xmu.pc.in:
	* configure.ac:
	Various cleanups to build system, including correct use of pkg-config.

2003-12-23 Jeremy C. Reed <reed@reedmedia.net>

	* ChangeLog
	Caught up on all missing by me starting Dec. 16.

2003-12-23 Jeremy C. Reed <reed@reedmedia.net>

	* Makefile.am
	* configure.ac
	Fix versions for Xmu and Xmuu libraries.  Using
	-version-number 6:2:1 for Xmu.  And using -version-info
	1:0:1 for Xmuu. (This may be out of order, need to test
	again.)
