@@ -6,5 +6,7 @@ includedir=@includedir@
 Name: Xmuu
 Description: Mini Xmu Library
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lXmuu @XMUU_LIBS@
-Cflags: -I${includedir} @XMUU_CFLAGS@
+Requires: xproto x11
+Requires.private: x11
+Cflags: -I${includedir}
+Libs: -L${libdir} -lXmuu
